--- a/views/display-playlist-2.mustache
+++ b/views/display-playlist-2.mustache
@@ -3,16 +3,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>musiCode</title>
-        <link rel="stylesheet" href="../../styling/css/styles.css">
-        <link rel="stylesheet" href="../../styling/css/search-collection-styling.css">
-        <link type="text/css" rel="stylesheet" href="../../styling/css/bootstrap.css">
+        <link rel="stylesheet" href="../../../styling/css/styles.css">
+        <link rel="stylesheet" href="../../../styling/css/search-collection-styling.css">
+        <link type="text/css" rel="stylesheet" href="../../../styling/css/bootstrap.css">
     </head>
     <body>
         
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <img src="../../styling/css/images/musiCode.png" alt="" width="120" height="96" class="d-inline-block align-text-top">
+          <img src="../../../styling/css/images/musiCode.png" alt="" width="120" height="96" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -64,7 +64,7 @@
     </nav>
 
         <br>
-        <h3 class="headingTitle">user Collection</h3>
+        <h3 class="headingTitle"> {{firstName}}'s Collection</h3>
         <br>
         {{#collections}}
         <!-- Content -->
