fixed so logo appears on page

--- a/views/search-results.mustache
+++ b/views/search-results.mustache
@@ -7,7 +7,7 @@
     <body>
         {{>menu}}
         <br>
-        <h2 class="headingTitle">Search Results  "{{search}}"</h2>
+        <h2 class="headingTitle">Search Results<br> "{{search}}"</h2>
         <br>
         {{#response}}
         <!-- Content -->
