updating bug fix

--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -68,7 +68,7 @@
                                     </div>
                                     <a target="_blank" href="{{projectUrl}}">My Code</a>
                                     <br>
-                                    <a href="/playlists/{{firstName}}/mycollection/{{userId}}">My Music</a>
+                                    <a href="/playlists/mycollection/{{firstName}}/{{userId}}">My Music</a>
                                 </div>
                             </div>
                         </div>
