added cards for my posts page

--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -66,10 +66,13 @@
                                             <span class="date">{{updatedAt}}</span>
                                         </div>
                                     </div>
-                                    <a target="_blank" href="{{projectUrl}}">My Code</a>
-                                    <br>
-                                    <a href="/playlists/mycollection/{{firstName}}/{{userId}}">My Music</a>
+                                    
                                 </div>
+                                <br>
+                                <a target="_blank" href="{{projectUrl}}"><button class="btn btn-outline-info">My Code</button></a>
+                                <br>
+                                <br>
+                                <a href="/playlists/mycollection/{{firstName}}/{{userId}}"><button class="btn btn-outline-info">My Music</button></a>
                             </div>
                         </div>
                     </div>
