fix delete bug on my post page

--- a/views/update-post.mustache
+++ b/views/update-post.mustache
@@ -81,7 +81,7 @@
     </form>
     <br>
      <div id='postsContainer'>
-        <form class='post_container' method="POST" action='/delete-post'>
+        <form class='post_container' method="POST" action='/posts/delete-post'>
             <input type="hidden" value="{{id}}" name="postId"/>
             <div>{{title}}</div>
             <div>{{body}}</div>
