--- a/views/my-posts.mustache
+++ b/views/my-posts.mustache
@@ -47,6 +47,7 @@
                                     <br>
                                     <br>
                                     <form class='post_container' method="POST" action='/posts/delete-post'>
+                                        <input type="hidden" value="{{id}}" name="postId"/>
                                         <button class="btn btn-outline-info">Delete</button>
                                     </form> 
                                     <br>
