--- a/views/my-posts.mustache
+++ b/views/my-posts.mustache
@@ -11,9 +11,9 @@
         {{>menu}}
         <br>
         
-        <h3>Hello, {{firstName}}!</h3>
+        <h3 class="headingTitle">Hello, {{firstName}}!</h3>
         
-        <h4><i>You are viewing all of your posts.</i></h4>
+        <h4 class="headingTitle"><i>You are viewing all of your posts.</i></h4>
         <br>
         {{#posts}}
         <div class="container mt-5 mb-5">
