--- a/views/update-post.mustache
+++ b/views/update-post.mustache
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>musiCode</title>
@@ -10,86 +10,134 @@
     </head>
     <body>
         
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
-      <div class="container">
-        <a class="navbar-brand" href="/">
-          <img src="../../styling/css/images/musiCode.png" alt="" width="120" height="96" class="d-inline-block align-text-top">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/users/dashboard">Dashboard<span class="sr-only"></span></a>
-      </li>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="/users/login">
-                <svg class="bi bi-power" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" d="M5.578 4.437a5 5 0 1 0 4.922.044l.5-.866a6 6 0 1 1-5.908-.053l.486.875z"/>
-                  <path fill-rule="evenodd" d="M7.5 8V1h1v7h-1z"/>
-                </svg>
-                Login/Register</a>
-            </li>
+      <nav class="navbar navbar-expand-lg navbar-light bg-info">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <img src="../../styling/css/images/musiCode.png" alt="" width="120" height="96" class="d-inline-block align-text-top">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/users/dashboard">Dashboard<span class="sr-only"></span></a>
+        </li>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/users/login">
+                  <svg class="bi bi-power" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M5.578 4.437a5 5 0 1 0 4.922.044l.5-.866a6 6 0 1 1-5.908-.053l.486.875z"/>
+                    <path fill-rule="evenodd" d="M7.5 8V1h1v7h-1z"/>
+                  </svg>
+                  Login/Register</a>
+              </li>
 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <svg class="bi bi-person-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                </svg>
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/playlists/mycollection">My Collection</a></li>
-                <li><a class="dropdown-item" href="/posts/my-posts">My Posts</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="/users/logout">
-                    <svg class="bi bi-power" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M5.578 4.437a5 5 0 1 0 4.922.044l.5-.866a6 6 0 1 1-5.908-.053l.486.875z"/>
-                        <path fill-rule="evenodd" d="M7.5 8V1h1v7h-1z"/>
-                    </svg>
-                    Log out</a></li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <svg class="bi bi-person-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                  </svg>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="/playlists/mycollection">My Collection</a></li>
+                  <li><a class="dropdown-item" href="/posts/my-posts">My Posts</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="/users/logout">
+                      <svg class="bi bi-power" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" d="M5.578 4.437a5 5 0 1 0 4.922.044l.5-.866a6 6 0 1 1-5.908-.053l.486.875z"/>
+                          <path fill-rule="evenodd" d="M7.5 8V1h1v7h-1z"/>
+                      </svg>
+                      Log out</a></li>
+                </ul>
+              </li>
               </ul>
-            </li>
-            </ul>
 
-            <form class="d-flex" method="post" action="/searches/search">
-              <input class="form-control mr-2" type="text" name="searchtextbox" placeholder="Search artist or song" aria-label="Search">
-              <button class="btn btn-dark" type="submit">Search</button>
-            </form>
+              <form class="d-flex" method="post" action="/searches/search">
+                <input class="form-control mr-2" type="text" name="searchtextbox" placeholder="Search artist or song" aria-label="Search">
+                <button class="btn btn-dark" type="submit">Search</button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    </nav>
-<body>
-    {{#post}}
-    <form method="POST" action='/posts/update-post/{{id}}' id='inputContainer'>
-        <div id="subjectDiv">
-            <input type="text" placeholder="title" id="titleTextBox" name="title" value="{{title}}"/>
-            
-        </div>
-        <div id="bodyDiv">
-            <input type="text" placeholder="body" id="bodyTextBox" name="body" value="{{body}}"/>
-        </div>
-        <div id="projectUrl">
-            <input type="text" placeholder="projectUrl" id="projectUrlTextBox" name="projectUrl" value="{{projectUrl}}"/>
-        <div id="submitDiv">
-            <button id="postButton">Update</button>
-        </div>
-    </form>
+      </nav>
     <br>
-     <div id='postsContainer'>
-        <form class='post_container' method="POST" action='/posts/delete-post'>
-            <input type="hidden" value="{{id}}" name="postId"/>
-            <div>{{title}}</div>
-            <div>{{body}}</div>
-            <div>{{projectUrl}}</div>
-            <div><button>Delete</button></div>
-        </form>
-    </div>
-    {{/post}}
-    {{>footer}}
-</body>
+    {{#post}}
+    <div class="col-md-6 mx-auto">
+            <div class="card text-center">
+                <h5 class="card-header" id="postCardHeader"><i>So you got it wrong?!</i></h5>
+                <div class="card-body">
+                <form method="POST" action='/posts/update-post/{{id}}' id='inputContainer'>
+                    <div id="subjectDiv">
+                        <label>Fixing your baby's name?</label>
+                        <br>
+                        <input type="text" placeholder="The project name silly" id="titleTextBox" name="title" value="{{title}}"/>
+                    </div>
+                    <br>
+                    <div id="bodyDiv">
+                        <label>Want to tell us more?</label>
+                        <br>
+                        <input type="text" placeholder="Spill the beans.." id="bodyTextBox" name="body" value="{{body}}"/>
+                    </div>
+                    <br>
+                    <div id="projectUrl">
+                        <label>Oh you got the link wrong?</label>
+                        <br>
+                        <input type="text" placeholder="Let us see the goods" id="projectUrlTextBox" name="projectUrl" value="{{projectUrl}}"/>
+                    </div>
+                    <br>
+                    <div id="submitDiv">
+                        <button class="btn btn-outline-info">Lay it on us, once again!</button>
+                    </div>
+                </form>
+                </div>
+            </div>
+        </div>
+        <br>
+
+      <div class="container mt-5 mb-5">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-8">
+                        <div class="d-flex flex-row"></div>
+                        <div class="row news-card p-3 bg-white">
+                            <div class="col-md-4">
+                                <div class="feed-image"><img class="news-feed-image rounded img-fluid img-responsive" src="../../styling/css/images/musiCode3.png"></div>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="news-feed-text">
+                                    <h5>{{title}}</h5>
+                                    <span>{{body}}<br></span>
+                                    <div class="d-flex flex-row justify-content-between align-items-center mt-2">
+                                        <div class="d-flex creator-profile">
+                                            <div class="d-flex flex-column ml-2">
+                                                <h6 class="username">{{firstName}} {{lastName}}</h6>
+                                                <h6 class="username">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-at" viewBox="0 0 16 16">
+                                                        <path d="M13.106 7.222c0-2.967-2.249-5.032-5.482-5.032-3.35 0-5.646 2.318-5.646 5.702 0 3.493 2.235 5.708 5.762 5.708.862 0 1.689-.123 2.304-.335v-.862c-.43.199-1.354.328-2.29.328-2.926 0-4.813-1.88-4.813-4.798 0-2.844 1.921-4.881 4.594-4.881 2.735 0 4.608 1.688 4.608 4.156 0 1.682-.554 2.769-1.416 2.769-.492 0-.772-.28-.772-.76V5.206H8.923v.834h-.11c-.266-.595-.881-.964-1.6-.964-1.4 0-2.378 1.162-2.378 2.823 0 1.737.957 2.906 2.379 2.906.8 0 1.415-.39 1.709-1.087h.11c.081.67.703 1.148 1.503 1.148 1.572 0 2.57-1.415 2.57-3.643zm-7.177.704c0-1.197.54-1.907 1.456-1.907.93 0 1.524.738 1.524 1.907S8.308 9.84 7.371 9.84c-.895 0-1.442-.725-1.442-1.914z"/>
+                                                    </svg>
+                                                {{username}}</h6>
+                                                <span class="date">{{updatedAt}}</span>
+                                            </div>
+                                        </div>
+                                        
+                                    </div>
+                                    <br>
+                                    <a target="_blank" href="{{projectUrl}}"><button class="btn btn-outline-info">My Code</button></a>
+                                    <br>
+                                    <br>
+                                    <form class='post_container' method="POST" action='/posts/delete-post'>
+                                        <input type="hidden" value="{{id}}" name="postId"/>
+                                        <button class="btn btn-outline-info">Delete</button>
+                                    </form>
+                                  </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+      {{/post}}
+      {{>footer}}
+  </body>
 </html>
